--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,14 @@
   "dependencies": {
     "archiver": "^7.0.1",
     "axios": "^1.7.2",
-    "cloudinary": "^2.2.0",
+    "cloudinary": "^2.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jszip": "^3.10.1",
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.0",
     "streamifier": "^0.1.1"
   }
