--- a/server/.gitignore
+++ b/server/.gitignore
@@ -6,6 +6,7 @@
 /node_modules
 package-lock.json
 yarn.lock
+/uploads/
 
 # testing
 /coverage
@@ -22,7 +23,7 @@ yarn.lock
 .env.development.local
 .env.test.local
 .env.production.local
-/uploads
+
 
 npm-debug.log*
 yarn-debug.log*
