--- a/client/package.json
+++ b/client/package.json
@@ -38,19 +38,21 @@
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
     "redux": "5.0.1",
-    "simplebar-react": "^3.2.5"
+    "simplebar-react": "^3.2.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.41",
     "prettier": "3.3.2",
     "sass": "^1.77.5",
+    "tailwindcss": "^3.4.10",
     "vite": "^5.2.13"
   }
 }
