--- a/client/package.json
+++ b/client/package.json
@@ -31,8 +31,12 @@
     "chart.js": "^4.4.3",
     "classnames": "^2.5.1",
     "core-js": "^3.37.1",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-autosuggest": "^10.1.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
