--- a/client/package.json
+++ b/client/package.json
@@ -43,7 +43,8 @@
     "react-toastify": "^10.0.5",
     "redux": "5.0.1",
     "simplebar-react": "^3.2.5",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
